# curse_work_4_OOP

./: .env  README.md  main.py  pyproject.toml  vacancies.json
src/: api_cls.py  job_cls.py  json_cls.py  main_func.py  vacancies.json
